<resources>
    <string name="app_name">Todoリスト</string>
    <string name="action_settings">Settings</string>
    <string name="title">タイトル</string>
    <string name="titleHint">タイトルを入力してください。</string>
    <string name="content">内容</string>
    <string name="contentHint">内容をこちらに入力してください。</string>
    <string name="dateTime">日時</string>
    <string name="date">日付</string>
    <string name="datePickerBtn">日付を選択</string>
    <string name="time">時刻</string>
    <string name="timePickerBtn">時刻を選択</string>
    <string name="addBtn">追加</string>
    <string name="deleteBtn">削除</string>
    <string name="beforeMinutes">分前に通知をする</string>
    <string name="notify">通知</string>
    <string name="updateBtn">更新</string>
    <string name="editBtn">編集</string>
</resources>
