<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.DetailActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <com.beardedhen.androidbootstrap.BootstrapLabel
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="20sp"
            app:bootstrapHeading="h5"/>

        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.beardedhen.androidbootstrap.BootstrapLabel
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/content"
            android:textSize="20sp"
            app:bootstrapHeading="h5"/>

        <TextView
            android:id="@+id/contentText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.beardedhen.androidbootstrap.BootstrapLabel
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dateTime"
            android:textSize="20sp"
            app:bootstrapHeading="h5"/>

        <TextView
            android:id="@+id/dateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.beardedhen.androidbootstrap.BootstrapLabel
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notify"
            android:textSize="20sp"
            app:bootstrapHeading="h5"/>

        <TextView
            android:id="@+id/notifyCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/deleteBtn"
            app:bootstrapSize="lg"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:bootstrapBrand="warning"
            app:bootstrapText="@string/deleteBtn"
            android:layout_width="100dp"
            app:roundedCorners="true"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>